// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SettingsTable /> should display spinner 1`] = `
<div>
  <h2>
    Available Settings
  </h2>
  <p>
    For each uploaded file, a new OpenVPN client instance is created. Please check the settings file for errors if the instance is enabled and not running a few minutes after setup.
  </p>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;

exports[`<SettingsTable /> should render info when there are no clients 1`] = `
<div>
  <h2>
    Available Settings
  </h2>
  <p>
    For each uploaded file, a new OpenVPN client instance is created. Please check the settings file for errors if the instance is enabled and not running a few minutes after setup.
  </p>
  <p
    class="text-muted text-center"
  >
    There are no settings added yet.
  </p>
</div>
`;

exports[`<SettingsTable /> should render table of settings 1`] = `
<div>
  <h2>
    Available Settings
  </h2>
  <p>
    For each uploaded file, a new OpenVPN client instance is created. Please check the settings file for errors if the instance is enabled and not running a few minutes after setup.
  </p>
  <div
    class="table-responsive"
  >
    <table
      class="table table-hover mb-0"
    >
      <thead
        class="thead-light"
      >
        <tr>
          <th>
            Instances
          </th>
          <th
            aria-label="Actions"
            class="text-center"
            scope="col"
          />
          <th
            aria-label="Actions"
            class="text-right"
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="align-middle"
          >
            <div
              class="custom-control custom-switch"
            >
              <input
                checked=""
                class="custom-control-input"
                id="1"
                type="checkbox"
              />
              <label
                class="custom-control-label"
                for="1"
              >
                A1
              </label>
            </div>
          </td>
          <td
            class="align-middle text-center"
          >
            Running
            <button
              aria-label="Check status"
              class="btn btn btn-sm"
              title="Check status"
              type="button"
            >
              <i
                class="fa fa-redo"
              />
            </button>
          </td>
          <td
            class="text-right"
          >
            <button
              class="btn btn-sm btn-danger"
              type="button"
            >
              <i
                class="fa fa-trash-alt mr-2"
              />
              Delete
            </button>
          </td>
        </tr>
        <tr>
          <td
            class="align-middle"
          >
            <div
              class="custom-control custom-switch"
            >
              <input
                class="custom-control-input"
                id="2"
                type="checkbox"
              />
              <label
                class="custom-control-label"
                for="2"
              >
                A2
              </label>
            </div>
          </td>
          <td
            class="align-middle text-center"
          />
          <td
            class="text-right"
          >
            <button
              class="btn btn-sm btn-danger"
              type="button"
            >
              <i
                class="fa fa-trash-alt mr-2"
              />
              Delete
            </button>
          </td>
        </tr>
        <tr>
          <td
            class="align-middle"
          >
            <div
              class="custom-control custom-switch"
            >
              <input
                checked=""
                class="custom-control-input"
                id="3"
                type="checkbox"
              />
              <label
                class="custom-control-label"
                for="3"
              >
                B1
              </label>
            </div>
          </td>
          <td
            class="align-middle text-center"
          >
            Running
            <button
              aria-label="Check status"
              class="btn btn btn-sm"
              title="Check status"
              type="button"
            >
              <i
                class="fa fa-redo"
              />
            </button>
          </td>
          <td
            class="text-right"
          >
            <button
              class="btn btn-sm btn-danger"
              type="button"
            >
              <i
                class="fa fa-trash-alt mr-2"
              />
              Delete
            </button>
          </td>
        </tr>
        <tr>
          <td
            class="align-middle"
          >
            <div
              class="custom-control custom-switch"
            >
              <input
                class="custom-control-input"
                id="4"
                type="checkbox"
              />
              <label
                class="custom-control-label"
                for="4"
              >
                B2
              </label>
            </div>
          </td>
          <td
            class="align-middle text-center"
          />
          <td
            class="text-right"
          >
            <button
              class="btn btn-sm btn-danger"
              type="button"
            >
              <i
                class="fa fa-trash-alt mr-2"
              />
              Delete
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
